force-app/main/default/objects/area_of_triangle__c/area_of_triangle__c.object-meta.xml
<CustomObject>
    <label>triangle</label>
    <nameField>
        <label>area of triangle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>triangles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>