force-app/main/default/objects/area_of_triangle__c/fields/area_of_triangle__c.field-meta.xml
<CustomField>
    <fullName>area_of_triangle__c</fullName>
    <formula>SQRT(( s__c - side_1_of_triangle__c ) *( s__c - side_2_of_triangle__c )*( s__c - side_3_of_triangle__c )* s__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>area of triangle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>