force-app/main/default/objects/area_of_triangle__c/fields/s__c.field-meta.xml
<CustomField>
    <fullName>s__c</fullName>
    <formula>0.5* (side_1_of_triangle__c + side_2_of_triangle__c + side_3_of_triangle__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>