force-app/main/default/objects/area_of_triangle__c/fields/side_1_of_triangle__c.field-meta.xml
<CustomField>
    <fullName>side_1_of_triangle__c</fullName>
    <label>side 1 of triangle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>